src/objects/loan__Fiscal_Year__c.object
<CustomObject>
    <fields>
        <fullName>loan__End_Date__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__FY_Closing_Balance__c</fullName>
        <label>FY Closing Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Fiscal_Year_Setting_Id__c</fullName>
        <label>Fiscal Year Setting Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>loan__Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Close</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finally Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Future</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Fiscal Year</label>
    <nameField>
        <label>Fiscal Year Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fiscal Year</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>